final optimization and reorganization into better project structure