@@ -1,7 +1,7 @@
 package com.imprint.benchmark;
 
 import com.imprint.benchmark.competitors.*;
-import com.imprint.benchmark.competitors.Competitor;
+import com.imprint.benchmark.competitors.SerializingBenchmark;
 import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.infra.Blackhole;
 import org.openjdk.jmh.runner.Runner;
@@ -9,7 +9,6 @@ import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -21,61 +20,60 @@ import java.util.concurrent.TimeUnit;
 @Fork(value = 1, jvmArgs = {"-Xms4g", "-Xmx4g"})
 public class ComparisonBenchmark {
 
-    private static final List<Competitor> COMPETITORS = Arrays.asList(
-            new ImprintCompetitor(),
-            new JacksonJsonCompetitor(),
-            new ProtobufCompetitor(),
-            new FlatBuffersCompetitor(),
-            new AvroCompetitor(),
-            new ThriftCompetitor(),
-            new KryoCompetitor(),
-            new MessagePackCompetitor()
+    private static final List<SerializingBenchmark> FRAMEWORKS = List.of(
+            new ImprintSerializingBenchmark(),
+            new JacksonSerializingBenchmark(),
+            new ProtobufSerializingBenchmark(),
+            new FlatBuffersSerializingBenchmark(),
+            new AvroSerializingBenchmark(),
+            new ThriftSerializingBenchmark(),
+            new KryoSerializingBenchmark(),
+            new MessagePackSerializingBenchmark()
     );
 
     @Param({"Imprint", "Jackson-JSON", "Protobuf", "FlatBuffers", "Avro-Generic", "Thrift", "Kryo", "MessagePack"})
-    public String competitorName;
+    public String framework;
 
-    private Competitor competitor;
+    private SerializingBenchmark serializingBenchmark;
 
     @Setup(Level.Trial)
     public void setup() {
-        // Find the competitor implementation
-        competitor = COMPETITORS.stream()
-                .filter(c -> c.name().equals(competitorName))
+        serializingBenchmark = FRAMEWORKS.stream()
+                .filter(c -> c.name().equals(framework))
                 .findFirst()
-                .orElseThrow(() -> new IllegalStateException("Unknown competitor: " + competitorName));
+                .orElseThrow(() -> new IllegalStateException("Unknown framework: " + framework));
 
         // Create the test data
         DataGenerator.TestRecord testRecord1 = DataGenerator.createTestRecord();
         DataGenerator.TestRecord testRecord2 = DataGenerator.createTestRecord();
 
         // Setup the competitor with the data
-        competitor.setup(testRecord1, testRecord2);
+        serializingBenchmark.setup(testRecord1, testRecord2);
     }
 
     @Benchmark
     public void serialize(Blackhole bh) {
-        competitor.serialize(bh);
+        serializingBenchmark.serialize(bh);
     }
 
     @Benchmark
     public void deserialize(Blackhole bh) {
-        competitor.deserialize(bh);
+        serializingBenchmark.deserialize(bh);
     }
 
     @Benchmark
     public void projectAndSerialize(Blackhole bh) {
-        competitor.projectAndSerialize(bh);
+        serializingBenchmark.projectAndSerialize(bh);
     }
 
     @Benchmark
     public void mergeAndSerialize(Blackhole bh) {
-        competitor.mergeAndSerialize(bh);
+        serializingBenchmark.mergeAndSerialize(bh);
     }
 
     @Benchmark
     public void accessField(Blackhole bh) {
-        competitor.accessField(bh);
+        serializingBenchmark.accessField(bh);
     }
 
     public static void main(String[] args) throws RunnerException {
